--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2680,7 +2680,7 @@ button.small,
 
 #header {
   text-align: center;
-  padding: 1.5em 0 0 0;
+  /* padding: 1.5em 0 0 0; */
   background-color: #fff;
   background-image: url('images/bg02.png'), url('images/bg02.png'),
     url('images/bg01.png');
@@ -2691,6 +2691,7 @@ button.small,
 
 #header h1 {
   font-size: 3em;
+  line-height: 1.25em;
   /* padding: 0 0 2.75em 0; */
   margin: 0;
 }
@@ -2699,6 +2700,11 @@ button.small,
   font-size: 1.5em;
   letter-spacing: -0.025em;
   border: 0;
+}
+
+#header h2 {
+  line-height: 1em;
+  padding-bottom: 0.5em;
 }
 
 #nav {
