more updates to resume and index

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1283,9 +1283,9 @@ button,
   #header {
     padding: 2em 0 0 0;
 
-    h1 {
-      padding: 0 0 1.75em 0;
-    }
+    // h1 {
+    //   padding: 0 0 1.75em 0;
+    // }
   }
 
   /* Banner */
