--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2202,7 +2202,7 @@ label {
   color: #000;
 }
 
-.image.left:hover .edit {
+#project.inage.left:hover .edit {
   display: block;
 }
 
@@ -3259,6 +3259,10 @@ button.small,
 
   #banner {
     height: 20em;
+  }
+
+  #banner #nav {
+    display: none;
   }
 
   #banner header h2 {
