fixed undefined displaying on titlebar for mobile view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3368,7 +3368,7 @@ button.small,
   }
 
   #titleBar .title {
-    display: block;
+    display: none;
     position: relative;
     font-weight: 600;
     text-align: center;
